--- a/src/Anyx/CrosswordBundle/Resources/public/css/main.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/main.css
@@ -36,11 +36,12 @@ TEXTAREA {
     float: left;
 }
 
-.profile-error {
+DIV.profile-error {
     display: none;
     position: fixed;
     width: 840px;
     top: 135px;
     left: 50%;
     margin-left: -445px;
+    background-color: #F2DEDE
 }
