--- a/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
@@ -66,7 +66,8 @@
                     defaultStatus   : '{%trans%}Current status is reflected in this block{%endtrans%}',
                     wordAdded       : '{%trans%}Success. Now you can add new word{%endtrans%}',
                     wordRemoved     : '{%trans%}Word removed{%endtrans%}',
-                    saveSuccessfully: '{%trans%}Save successfully{%endtrans%}'
+                    saveSuccessfully: '{%trans%}Save successfully{%endtrans%}',
+                    saveError       : '{%trans%}Saving error{%endtrans%}'
                 }
 			});
 		});
