--- a/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
@@ -110,7 +110,7 @@
             <span id="status" class="i-status-bar"></span>
             <input type="text" class="i-word-text" autocomplete="off" />
             <label>{% trans %}Definition{% endtrans %}</label>
-            <textarea class="i-word-definition" autocomplete="off"></textarea>
+            <textarea class="i-word-definition" class="no-resize" autocomplete="off"></textarea>
 
 			<div class="i-direction-chooser btn-group">
                 <button class="btn" rel="horizontal">{% trans %}Horizontal{% endtrans %}</button>
